@@ -1,3 +1,7 @@
+2006-03-23  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_printTestPage): Implemented.
+
 2006-03-22  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_getPPDs): Include ppd-make
